...
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cRh-ph-ujF">
                                <rect key="frame" x="16" y="602" width="150" height="45"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Cancel"/>
                                <connections>
                                    <segue destination="kxF-mD-uSN" kind="show" id="i1T-aY-Jvk"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pOH-0I-zGV">
                                <rect key="frame" x="210" y="602" width="149" height="45"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.28244361281394958" green="0.2783641517162323" blue="0.2863711416721344" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Confirm"/>
                                <connections>
                                    <action selector="confirmAddTransaction:" destination="vZG-xR-1uJ" eventType="touchUpInside" id="mSt-vp-Bmr"/>
                                    <segue destination="kxF-mD-uSN" kind="show" id="e2D-U1-NR8"/>
                                </connections>
                            </button>
                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="WO7-xm-pbi">
...
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U1t-Ob-261">
                                <rect key="frame" x="0.0" y="551" width="375" height="61"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.37263837456703186" green="0.37262961268424988" blue="0.37263134121894836" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="New Budget"/>
                                <connections>
                                    <segue destination="sD4-kg-1th" kind="show" id="OC0-k6-cuq"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sjq-KA-ogz">
                                <rect key="frame" x="204" y="600" width="155" height="47"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.37263837456703186" green="0.37262961268424988" blue="0.37263134121894836" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="Continue"/>
                                <connections>
                                    <action selector="recordInput:" destination="sD4-kg-1th" eventType="touchUpInside" id="AEL-54-nrt"/>
                                    <segue destination="viL-Ig-Z9x" kind="show" id="QGu-g7-xEB"/>
                                </connections>
                            </button>
                        </subviews>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AoB-Bb-ibY">
                                <rect key="frame" x="25" y="538" width="334" height="45"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.35302260518074036" green="0.34894230961799622" blue="0.3569490909576416" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Add Category"/>
                                <connections>
                                    <action selector="addItem:" destination="viL-Ig-Z9x" eventType="touchUpInside" id="R0v-kA-xJg"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                    <segment title="Weekly"/>
                                    <segment title="Biweekly"/>
                                    <segment title="Triweekly"/>
                                    <segment title="Monthly"/>
                                </segments>
                            </segmentedControl>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Reset Every:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yna-WI-Alv">
                                <rect key="frame" x="20" y="288" width="95" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
...
