...
    var numCells : Int = 4
    //Number of items to display, and which items to display
    func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
        return numCells
    }
    
    let list = ["Food","Clothes","Entertainment", "Transportation" ]
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        //let cell = Bundle.main.loadNibNamed("catCell", owner: self, options: nil)?.first as! catCell;
        let cell = myTableView.dequeueReusableCell(withIdentifier: "catCell", for: indexPath) as! catCell
        makedefault()
        return cell
    }
...
